--- a/Gopkg.toml
+++ b/Gopkg.toml
@@ -25,6 +25,18 @@
 #   unused-packages = true
 
 
+[[constraint]]
+  name = "github.com/aws/aws-sdk-go"
+  version = "1.23.19"
+
+[[constraint]]
+  name = "github.com/techpro-studio/gohttplib"
+  version = "1.0.0"
+
+[[constraint]]
+  name = "go.mongodb.org/mongo-driver"
+  version = "1.1.1"
+
 [prune]
   go-tests = true
   unused-packages = true
