--- a/Gopkg.toml
+++ b/Gopkg.toml
@@ -31,7 +31,7 @@
 
 [[constraint]]
   name = "github.com/techpro-studio/gohttplib"
-  version = "1.0.0"
+  version = "develop"
 
 [[constraint]]
   name = "go.mongodb.org/mongo-driver"
